# disco-baa-01

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: README.md
data/processed/: README.md
data/raw/: README.md
data_samples/: M0142_cosinor_features.csv
dev/examples/: Body temperature rhythm analysis-filtered_add_temp_rank.ipynb  cosinor_drink_extracion_single_process.py
dev/examples/luoyang/: cosinor_drink_extracion_single_process.py
dev/notes/: a suggested folder structure.sh  interesting_columns.md  todos.md  uninteresting_columns.md  weirdness.md
dev/scratch/: use_dot_env.ipynb
notebooks/: 01_journal.ipynb  exploratory_analysis.ipynb  join_with_cosinor_id_table.ipynb  match_cosinor_w_temperature_logger.ipynb
notebooks/01_EA/: 01_ea_masterfile.ipynb
notebooks/01_EDA/: 01_eda_masterfile.ipynb  02_eda_cosinar.ipynb  03_which_ewes_were_preggers.ipynb
notebooks/01_EDA/ss_eda/: find_repro_columns.ipynb
notebooks/on_probation_for_review_and_delete/: 01_Which_data_do_we_care_about.ipynb  04_2024_cohort_only.ipynb
scripts/: plot_cosinor_fits.py
scripts/ingest/: ingest_masterfile.py  scrape_cosinor_ids.py
scripts/pre_processing.py/: 01_convert_formats.py  01_filter_masterfile.py  01_ingest_masterfile.py
src/: definitions.example.py  definitions.py
src/disco_baa_01/: __init__.py  utils.py
tests/: test_utils.py
